[package]
name = "mpesa_yum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
flate2 = { version = "1.0.28", features=["zlib"] }
sha2 = "0.10.8"
sqlite = "0.33.0"

[dev-dependencies]
tempfile = "3.10.1"
